--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,10 @@
       <div class="p-col-2 p-sm-2 logo">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M415.4 512h-95.1L212.1 357.5v91.1L125.7 512H28V29.8L68.5 0h108.1l123.7 176.1V63.5L386.7 0h97.7v461.5zM38.8 35.3V496l72-52.9V194l215.5 307.6h84.8l52.4-38.2h-78.3L69 13zm82.5 466.6l80-58.8v-101l-79.8-114.4v220.9L49 501.9h72.3zM80.6 10.8l310.6 442.6h82.4V10.8h-79.8v317.6L170.9 10.8zM311 191.7l72 102.8V15.9l-72 53v122.7z"/></svg><b>Neeraj Gupta</b>
       </div>
-      <div class="p-col-9 p-sm-9 navbar">
+      <div class="p-col-10">
+        <p-menubar [model]="items" />
+      </div>
+      <!-- <div class="p-col-9 p-sm-9 navbar">
         <ul>
           <li><a class="active" href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -21,7 +24,8 @@
         styleClass="mr-2" 
         
         shape="circle" />
-      </div>
+      </div> -->
+      
     </header>
 
 </div>
