--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,62 +1,72 @@
 <section class="home" id="home">
 
-<div class=" p-d-flex p-jc-center">
-  <div class="loader">
-    <span style="--i:1"></span>
-    <span style="--i:2"></span>
-    <span style="--i:3"></span>
-    <span style="--i:4"></span>
-    <span style="--i:5"></span>
-    <span style="--i:6"></span>
-    <span style="--i:7"></span>
-    <span style="--i:8"></span>
-    <span style="--i:9"></span>
-    <span style="--i:9"></span>
-    <span style="--i:10"></span>
-  </div>
-  <div class="loader">
-    <span style="--i:1"></span>
-    <span style="--i:2"></span>
-    <span style="--i:3"></span>
-    <span style="--i:4"></span>
-    <span style="--i:5"></span>
-    <span style="--i:6"></span>
-    <span style="--i:7"></span>
-    <span style="--i:8"></span>
-    <span style="--i:9"></span>
-    <span style="--i:9"></span>
-    <span style="--i:10"></span>
-  </div>
-  <div class="loader">
-    <span style="--i:1"></span>
-    <span style="--i:2"></span>
-    <span style="--i:3"></span>
-    <span style="--i:4"></span>
-    <span style="--i:5"></span>
-    <span style="--i:6"></span>
-    <span style="--i:7"></span>
-    <span style="--i:8"></span>
-    <span style="--i:9"></span>
-    <span style="--i:9"></span>
-    <span style="--i:10"></span>
-  </div>
-</div>
-
+  <!-- <div class=" p-d-flex p-jc-center">
+    <div class="loader">
+      <span style="--i:1"></span>
+      <span style="--i:2"></span>
+      <span style="--i:3"></span>
+      <span style="--i:4"></span>
+      <span style="--i:5"></span>
+      <span style="--i:6"></span>
+      <span style="--i:7"></span>
+      <span style="--i:8"></span>
+      <span style="--i:9"></span>
+      <span style="--i:9"></span>
+      <span style="--i:10"></span>
+    </div>
+    <div class="loader">
+      <span style="--i:1"></span>
+      <span style="--i:2"></span>
+      <span style="--i:3"></span>
+      <span style="--i:4"></span>
+      <span style="--i:5"></span>
+      <span style="--i:6"></span>
+      <span style="--i:7"></span>
+      <span style="--i:8"></span>
+      <span style="--i:9"></span>
+      <span style="--i:9"></span>
+      <span style="--i:10"></span>
+    </div>
+    <div class="loader">
+      <span style="--i:1"></span>
+      <span style="--i:2"></span>
+      <span style="--i:3"></span>
+      <span style="--i:4"></span>
+      <span style="--i:5"></span>
+      <span style="--i:6"></span>
+      <span style="--i:7"></span>
+      <span style="--i:8"></span>
+      <span style="--i:9"></span>
+      <span style="--i:9"></span>
+      <span style="--i:10"></span>
+    </div>
+  </div> -->
 
   <div class="p-grid backgroundloader ">
-    <div class="p-col-12 p-d-flex">
 
-      <div class="content p-col-6 ">
-        <h2>Hi There,<br /> I'm Neeraj <span>Gupta</span></h2>
-        <p>i am <span class="typing-text"></span></p>
-        
-        <p-button label="Secondary" [rounded]="true" severity="secondary" />
+    <div class="flex flex-wrap w-100 p-col-12 justify-content-between p-mt-5" >
+      <div class="flex align-items-center justify-content-center font-bold m-2 border-round"
+        style="min-width: 150px; min-height: 100px">
+       <div class="about">
+        <h1>Hi There,</h1>
+        <h2> I'm Neeraj Gupta</h2>
+        <h3>i am <span class="typing-text">{{title}}</span></h3>
+        <h3>I am <span class="typing-text">{{ currentString }}</span></h3>
+        <p-button label="Search" icon="pi pi-check" [loading]="loading" (onClick)="load()" />
+       </div>
+      </div>
 
+      <div class="rightimg">
+        <img draggable="false" class="tilt" src="./assets/images/Neeraj-Profile.png" alt="">
+      </div>
 
-        <a href="#about" class="btn"><span>About Me</span>
-          <i class="fas fa-arrow-circle-down"></i>
-        </a> 
-        <div class="socials">
+    </div>
+  </div>
+</section>
+
+<!-- https://www.tawk.to/?utm_source=tawk-messenger&utm_medium=link&utm_campaign=referral&utm_term=60df10bf7f4b000ac03ab6a8 -->
+
+<!-- <div class="socials">
           <ul class="social-icons">
             <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/neeraj-gupta-9ab41a26a"
                 target="_blank"><i class="fab fa-linkedin"></i></a></li>
@@ -69,13 +79,4 @@
                   class="fab fa-instagram" target="_blank"></i></a></li>
 
           </ul>
-        </div>
-      </div>
-      <div class="image p-col-6 p-jc-center p-d-flex">
-        <img draggable="false" class="tilt" src="./assets/images/Neeraj-Profile.png" alt="">
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- https://www.tawk.to/?utm_source=tawk-messenger&utm_medium=link&utm_campaign=referral&utm_term=60df10bf7f4b000ac03ab6a8 -->
+        </div> -->
