--- a/src/mixin.css
+++ b/src/mixin.css
@@ -8,7 +8,7 @@ html {
   height: 500px;
   position: relative;
 
-  @media screen and (max-width: 300px) {
+  @media screen and (width: 300px) {
     height: 900px;
   }
 
@@ -96,3 +96,69 @@ html {
 }
 
 /* Header End */
+
+/* About Strat */
+#about{
+  margin-top: 60px;
+  .caption{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+    align-items: center;
+    /* background-color: aqua; */
+  }
+  .p-grid{
+    background-color: rgba(159, 187, 187,0.1);
+    .about_summery{
+      /* display: block; */
+      justify-content: space-around;
+      .img_content{
+        text-align: center;
+        img{
+          width: 350px;
+          height: 400px;
+          border: 1px solid black;
+          border-radius: 10px;
+        }
+      }
+      .summery{
+        /* padding: 0px 100px 6px 72px; */
+        p{
+          padding: 0px 24px 6px 27px;
+          font-size: 14px;
+          font-weight: 600;
+          font-family: 'Inter var';
+          line-height: 25px;
+
+        }
+        label{
+          b{
+            font-size: 18px
+          }
+          font-size: 14px;
+          font-weight: 600;
+          font-family: 'Inter var';
+          line-height: 25px;
+        }
+        .p-button{
+          padding: 10px;
+          background-color: aliceblue;
+          color: black;
+          box-shadow: 4px 3px 5px rgb(31, 28, 28);
+          text-decoration: none;
+          border: 1px solid black;
+          height: 40px;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+/* About End */
+/* Tour End */
+#Tour{
+  margin-top: 60px;
+  padding: 0px;
+}
+/* Tour End */
