--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,41 @@
-<div style="margin-top: 60px;">about works!</div>
+<div id="about">
+
+    <div class="caption">
+        <i class="pi pi-user" style="font-size: 2.5rem"></i>
+        <h1> About Me</h1>
+    </div>
+
+    <div class="p-grid">
+        <div class="p-col-12 p-pl-0 p-pr-0">
+            <div class="about_summery p-d-flex flex-wrap">
+                <div class="p-sm-6 p-p-0 img_content">
+                    <img src="../assets/images/Neeraj-Profile2.jpg" alt="not" height="100%" width="100%">
+                </div>
+                <div class="p-sm-6 summery">
+                    <h2>I'm Neeraj Gupta</h2>
+                    <h3>Full Stack Developer</h3>
+                    <p>I am a Ui developer in CRISIL DEC-2023 to present and I was an Associate Engineer based in Nashik
+                        JUN-2022 to DEC-2023, India. I am an Computer Application undergraduate from Veer BAhadur Singh
+                        Purvanchal University Jaunpur. I am very passionate about improving my coding skills &
+                        developing applications & websites. I build WebApps and Websites using Springboot And Angular.
+                        Working for myself to improve my skills. Love to build Full-Stack Peoject.</p>
+
+                    <label for="">
+                        <pre><b>Email</b> : soft.guptaneeraj&#64;gmail.com</pre>
+                    </label>
+                    <label for="">
+                        <pre><b>Place</b> : Mumbai Dombivali, India - 421202</pre>
+                    </label>
+
+                    <a href="../assets/images/Resume.pdf" target="_blank" rel="noopener noreferrer" class="p-button pi pi-address-book" >
+                        External
+                    </a>
+                   
+
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</div>
