--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -3,5 +3,35 @@
     <div>
         <!-- <div #flipbookContainer></div> -->
         <!-- <flipbook [model]="book" [startAt]="2"></flipbook> -->
+
+        <input type="checkbox" id="c1">
+        <input type="checkbox" id="c1">
+        <input type="checkbox" id="c1">
+        <div id="cover"> <img src="../assets/images/contact.png" alt=""> </div>
+        <div class="flip-book">
+            <div class="flip" id=" p1">
+                <div class="back">
+                    <img src="../assets/images/contact.png" alt="">
+                    <label for="c1" class="back-btn"></label>
+                </div>
+                <div class="front">
+                    <h2>apple</h2>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, eos exercitationem ad, quo aperiam fugit officiis architecto adipisci accusamus minus culpa inventore laudantium dolore sequi, voluptatum excepturi suscipit numquam quidem!</p>
+                   <label for="c1" class="next-btn"></label>
+                </div>
+            </div>
+            <div class="flip" id=" p2">
+                <div class="back">
+                    <img src="../assets/images/contact.png" alt="">
+                    <label for="c2" class="back-btn"></label>
+                </div>
+                <div class="front">
+                    <h2>apple</h2>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, eos exercitationem ad, quo aperiam fugit officiis architecto adipisci accusamus minus culpa inventore laudantium dolore sequi, voluptatum excepturi suscipit numquam quidem!</p>
+                   <label for="c2" class="next-btn"></label>
+                </div>
+            </div>
+            
+        </div>
     </div>
 </div>
