--- a/src/mixin.css
+++ b/src/mixin.css
@@ -2,6 +2,10 @@
 html {
   scroll-behavior: smooth;
 }
+.p-menubar {
+  background-color: white;
+  border: none;
+}
 #home {
   margin-top: 60px;
   background-color: #f1eeee;
@@ -160,5 +164,102 @@ html {
 #Tour{
   margin-top: 60px;
   padding: 0px;
+}
+
+
+input{
+  display: none;
+}
+img{
+  width: 100%;
+  height: 100%;
+}
+.book{
+  display: flex;
+}
+.cover{
+  width: 250px;
+  height: 400px;
+}
+.flip-book{
+  width: 250px;
+  height: 400px;
+  position: relative;
+  perspective: 1500px;
+
+}
+.flip{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
+  transition: .5s;
+  color: #000;
+}
+.p{
+
+}
+.front{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding: 0 13px;
+  box-shadow: inset 20px 0 50px rbga(0,0,0,0.5) 0 2px 5px rbga(0,0,0,0.5);
+}
+.back{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  background-color: #000;
+}
+.next-btn{
+  position: absolute;
+  bottom: 13px;
+  right: 13px;
+  cursor: pointer;
+  color: #000;
+
+}
+.back-btn{
+  position: absolute;
+  bottom: 13px;
+  right: 13px;
+  cursor: pointer;
+  color: #fff;
+}
+#p1{
+  z-index: 3;
+}
+#p2{
+  z-index: 2;
+}
+#p3{
+  z-index: 1;
+}
+#c1:checked ~ .flip-book #p1{
+  transform: rotateY(-180deg); 
+  z-index: 1;
+}
+#c2:checked ~ .flip-book #p2{
+  transform: rotateY(-180deg); 
+  z-index: 2;
+}
+#c3:checked ~ .flip-book #p3{
+  transform: rotateY(-180deg);
+  
+  z-index: 3;
 }
 /* Tour End */
