--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,21 +87,25 @@
 <div style="margin-top: 50px;">
   <p-galleria 
   [value]="images" 
+  [showThumbnails]="false" 
+  [showIndicators]="true" 
+  [showIndicatorsOnItem]="true" 
   [responsiveOptions]="responsiveOptions" 
-  [containerStyle]="{ 'max-width': '640px' }" 
-  [numVisible]="5" class="galleriahtm">
+  class="galleriahtm"
+  [autoPlay]="true" 
+  [circular]="true" 
+  >
       <ng-template pTemplate="item" let-item>
-        <div class="p-d-flex imgcontetb">
-          <h1>{{item.title}}</h1>
-          <img [src]="item.itemImageSrc" style="width: 100%;" />
+        <p-card class="p-d-flex imgcontetb">
+          <h6>{{item.title}}</h6>
+          <img [src]="item.itemImageSrc"/>
+     </p-card>
+    </ng-template>
+    <ng-template pTemplate="thumbnail" let-item>
+        <div class="grid grid-nogutter justify-content-center">
+            <img [src]="item.thumbnailImageSrc" style="display: block;" />
         </div>
-          
-      </ng-template>
-      <ng-template pTemplate="thumbnail" let-item>
-          <div class="grid grid-nogutter justify-content-center">
-              <img [src]="item.thumbnailImageSrc" />
-          </div>
-      </ng-template>
+    </ng-template>
 </p-galleria>
 </div>
 <router-outlet></router-outlet>
