--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+
+
+<div class="p-d-flex" >
+    <div class="layout__section">
+        <app-header></app-header>
+        <app-sidebar></app-sidebar>
+    </div>
+   <div class="dashbord">
+    <router-outlet></router-outlet>
+   </div>
+</div>
