--- a/src/assets/styles/topbar.scss
+++ b/src/assets/styles/topbar.scss
@@ -181,7 +181,13 @@
                         position: absolute;
                         bottom: 88px;
                         left: 13px;
+                        color: #6b7280;
                     }
+                }
+
+                .p-inputtextarea.p-inputtext{
+                    padding-left: 40px;
+
                 }
             }
 
