--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "./assets/styles/header.scss";
 @import "./assets/styles/sidebar.scss";
 @import "./assets/styles/topbar.scss";
+@import "./assets/styles/skills.scss";
 
 body{
     background: #ced5f129;
