--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
         <app-sidebar></app-sidebar>
     </div>
    <div class="dashbord">
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+     <app-topbar id="topbar"></app-topbar>
+     <app-skills id="skills"></app-skills>
    </div>
 </div>
