--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -20,6 +20,11 @@
                         SPRING, SPRINGBOOT, JDBC, HIBERNATE .</strong>
                     </p>
                 </div>
+                <div class="p-d-flex p-jc-center">
+                    <p-button label="About ME" severity="contrast"  />
+                </div>
+
+              
             </div>
 
 
