--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -7,7 +7,7 @@
         <div class="p-d-flex">
 
             <div class="p-col-6 p-p-0">
-                <div class="p-p-4">
+                <div class="p-pr-4 p-pt-0">
                     <h1>Every Day is a New Challenge</h1>
                     <p>Adaptability: Thrives in fast-paced environments; embraces new challenges as  opportunities for growth.
                         Problem-Solving: Strong analytical skills with a focus on innovative solutions to complex
@@ -21,7 +21,12 @@
                     </p>
                 </div>
                 <div class="p-d-flex p-jc-center">
-                    <p-button label="About ME" severity="contrast"  />
+                    
+                    <div class="resumebtn"  >
+                        <a href="/assets/Resume3.pdf" target="_blank" class="btn"><span>Resume</span>
+                          <i class="pi pi-angle-right"></i>
+                        </a>
+                      </div>
                 </div>
 
               
@@ -29,7 +34,7 @@
 
 
             <div class="p-col-6 p-p-0">
-                <div class="p-p-4">
+                <div class="p-pl-4 p-pt-0">
                     <h3>Webdesign</h3>
                     <p-progressBar [value]="value" />
 
