--- a/src/assets/styles/skills.scss
+++ b/src/assets/styles/skills.scss
@@ -3,9 +3,10 @@
     border: 1px solid grey;
     border-radius: 8px;
     box-shadow: 0 0.125rem 0.5rem 0 rgba(47, 43, 61, 0.35);
-    padding: 10px 20px;
+    padding: 50px 92px;
     // height: 300px;
     background-image: url(https://github.com/neeerajgupta/image/blob/main/neeraj1.jpg?raw=true);
+    
     background-size: cover; 
     background-position: center; 
     position: relative; 
@@ -19,20 +20,28 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgb(47 45 129 / 62%);
+        background:#0702d930;
         backdrop-filter: blur(1px); 
         z-index: 1; 
     }
     .skills-contats{
+        border: 1px solid grey;
+        border-radius: 8px;
+        box-shadow: 0 0.125rem 0.5rem 0 rgba(47, 43, 61, 0.35);
+        padding: 10px 20px;
+        background: #bcc0cb57;
+
+        z-index: 4;
+        position: relative;
         >h2{
+            margin-top: 0px;
             display: flex;
             justify-content: center;
             text-align: center;
             
 
         }
-        z-index: 4;
-        position: relative;
+       
 
         .p-progressbar{
             height: 10px;
@@ -41,6 +50,32 @@
                     font-size: 10px;
                 }
 
+            }
+        }
+
+        .resumebtn .btn {
+            padding: 1rem 3rem;
+            border-radius: 0.5em;
+            transition: 0.3s;
+            color: #fff;
+            background: #2506ad;
+           
+            font-family: "Nunito", sans-serif;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+
+            &:hover{
+                box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
+                i {
+                    transform: translateX(5px);
+                    
+                }
+            }
+             i {
+                margin-left: 0.3rem;
+                font-size: 1.2rem;
+                transition: 0.3s;
             }
         }
         
