--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,29 @@
 @import "./assets/styles/topbar.scss";
 @import "./assets/styles/skills.scss";
 
+:root {
+    
+    
+    --body-color: #393937;
+    --accent-color: #03e9f4;
+    --white-color: #fff;
+    --box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+      0 0 100px #03e9f4;
+  
+    
+    
+    --body-font: "Montserrat", sans-serif;
+    --normal-font-size: 1rem;
+  
+    
+    --font-regular: 400;
+    --font-semi-bold: 600;
+  
+    
+    --z-tooltip: 10;
+    --z-fixed: 100;
+  }
+
 body{
     background: #ced5f129;
     // overflow-x: hidden;
@@ -31,3 +54,123 @@ body{
 .dashbord{
     margin: 55px 0px 0px 98px;
 }
+
+.dashboard {
+    position: relative;
+}
+
+.scrollbtn {
+   position: sticky;
+   top: 75vh;
+   height: 20px;
+   z-index: 99999;
+    right: 20px; 
+    width: 20px;
+
+
+
+
+
+    &.button-animation {
+        // position: relative;
+        display: inline-block;
+        padding: 20px 30px;
+        color: var(--accent-color);
+        text-transform: uppercase;
+        overflow: hidden;
+        letter-spacing: 4px;
+        transition: 0.5s;
+        span {
+          position: absolute;
+          display: block;
+        }
+      
+        span:nth-child(1) {
+          top: 0;
+          left: -100%;
+          width: 100%;
+          height: 2px;
+          background: linear-gradient(90deg, transparent, var(--accent-color));
+          animation: btn-anim1 1s linear infinite;
+        }
+        @keyframes btn-anim1 {
+          0% {
+            left: -100%;
+          }
+          50%,
+          100% {
+            left: 100%;
+          }
+        }
+      
+        span:nth-child(2) {
+          top: -100%;
+          right: 0;
+          width: 2px;
+          height: 100%;
+          background: linear-gradient(180deg, transparent, var(--accent-color));
+          animation: btn-anim2 1s linear infinite;
+          animation-delay: 0.25s;
+        }
+        @keyframes btn-anim2 {
+          0% {
+            top: -100%;
+          }
+          50%,
+          100% {
+            top: 100%;
+          }
+        }
+      
+        span:nth-child(3) {
+          bottom: 0;
+          right: -100%;
+          width: 100%;
+          height: 2px;
+          background: linear-gradient(270deg, transparent, var(--accent-color));
+          animation: btn-anim3 1s linear infinite;
+          animation-delay: 0.5s;
+        }
+        @keyframes btn-anim3 {
+          0% {
+            right: -100%;
+          }
+          50%,
+          100% {
+            right: 100%;
+          }
+        }
+      
+        span:nth-child(4) {
+          bottom: -100%;
+          left: 0;
+          width: 2px;
+          height: 100%;
+          background: linear-gradient(360deg, transparent, var(--accent-color));
+          animation: btn-anim4 1s linear infinite;
+          animation-delay: 0.75s;
+        }
+      
+        @keyframes btn-anim4 {
+          0% {
+            bottom: -100%;
+          }
+          50%,
+          100% {
+            bottom: 100%;
+          }
+        }
+      
+        &:hover {
+          background-color: var(--accent-color);
+          color: var(--white-color);
+          border-radius: 5px;
+          box-shadow: var(--box-shadow);
+        }
+      }
+      
+}
+
+
+
+
